packages/vue-component-library/src/styles/ftva/_block-staff-article-item.scss
.ftva.block-staff-article-item {
  --image-min-width: 384px;
  --image-aspect-ratio: 4/3;

  background-color: white;

  .molecule-no-image,
  .image {
    min-width: var(--image-min-width);
    width: unset;
    height: auto;
    aspect-ratio: var(--image-aspect-ratio);
    margin-right: var(--space-xl);
  }

  .meta {
    display: flex;
    flex-direction: column;
    flex: 1;
    justify-content: center;
    align-self: stretch;
    gap: 16px;
    width: 100%;
    height: auto;
    margin: 16px 0;
  }

  .category {
    @include ftva-subtitle-1;
    font-size: 20px;
    line-height: 1;
    color: $accent-blue;
    margin-bottom: unset
  }

  .title {
    @include ftva-card-title-1;
    color: $heading-grey;
    @include truncate(3);
    @include card-clickable-area;
    margin-bottom: unset
  }

  .description-summary-only {
    @include ftva-body;
    color: $body-grey;
    margin-top: 8px;
  }

  /* TODO Remove .date css rules for ftva as we are using ftva-date class where this component is used on the different templates*/
  .date {
    position: absolute;
    bottom: var(--space-s);
    display: flex;
    flex-direction: row;

    @include ftva-emphasized-subtitle;
    color: $accent-blue;
    letter-spacing: .04px;

    height: 70px;
    overflow: hidden;
  }

  /* TODO end */

  .ftva-description {
    @include ftva-body;
    color: $body-grey;
  }

  .ftva-date {
    @include ftva-emphasized-subtitle;
    color: $accent-blue;
    line-height: 1;
    letter-spacing: .04px;
    margin-top: auto;
  }

  // Breakpoints
  @media #{$small} {
    display: flex;
    flex-direction: column;
    flex-wrap: wrap;
    justify-content: flex-start;
    align-content: center;
    align-items: center;
    width: 100%;
    position: relative;
    // both the media border radius and this one are necessary
    border-radius: 10px;
    padding: 0;

    .title {
      @include truncate(2);
    }

    :deep(.media) {
      border-radius: 10px 10px 0 0;
    }

    .image {
      width: 100%;
      max-width: unset;
      height: 213px;
      margin-right: 0;
      aspect-ratio: 4/3;
    }

    :deep(.image) {
      height: 272px;

      .media {
        object-fit: cover;
      }
    }

    .li {
      border-radius: 10px;
      margin-bottom: 24px;
    }

    .meta {
      width: 100%;
      height: 213px;
      padding-left: 10px;
      padding-right: 8px;
    }

    .date {
      position: absolute;
      bottom: var(--space-s);
      display: flex;
      flex-direction: row;
      height: 40px;

      @include ftva-emphasized-subtitle;
      color: $accent-blue;
      letter-spacing: .04px;
      overflow: hidden;
    }
  }
}

